--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 #board-tiles-container {
     position: relative;
     border: 1px solid;
-    transition: opacity 0.5s;
+    transition: opacity 0.5s, border-color 0.1s;
 }
 
 .board-tile {
